--- a/Mortality_rate_prediction.ipynb
+++ b/Mortality_rate_prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Mortality_rate_prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMO5GRNOzHNrILD762/CCiL",
+      "authorship_tag": "ABX9TyP0fE4LNjgijRO1GbOLSVQ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\", force_remount=True)\n"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
       "source": [
         " !pip install -U pandasql"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,15 +108,15 @@
         "import numpy as np\n",
         "import pandasql as psql\n",
         "\n",
-        "demo_train = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Train/demographics.csv\")\n",
-        "labs_train = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Train/labs.csv\")\n",
-        "vitals_train = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Train/vitals.csv\")\n",
+        "demo_train = pd.read_csv(\"/content/gdrive/My Drive/DS/Train/demographics.csv\")\n",
+        "labs_train = pd.read_csv(\"/content/gdrive/My Drive/DS/Train/labs.csv\")\n",
+        "vitals_train = pd.read_csv(\"/content/gdrive/My Drive/DS/Train/vitals.csv\")\n",
         "\n",
-        "demo_test = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/demographics.csv\")\n",
-        "labs_test = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/labs.csv\")\n",
-        "vitals_test = pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/vitals.csv\")"
+        "demo_test = pd.read_csv(\"/content/gdrive/My Drive/DS/Test/demographics.csv\")\n",
+        "labs_test = pd.read_csv(\"/content/gdrive/My Drive/DS/Test/labs.csv\")\n",
+        "vitals_test = pd.read_csv(\"/content/gdrive/My Drive/DS/Test/vitals.csv\")"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "print('Vitals shape',vitals_train.shape)\n",
         "print('Labs shape',labs_train.shape)"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "source": [
         "demo_train.head(10)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
         "labs_train=labs_train.dropna()\n",
         "labs_test=labs_test.dropna()"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,10 +636,10 @@
         "#        newVitals.iloc[j,ind]=(newVitals.iloc[j,2]+newVitals.iloc[j,3])/2\n",
         "#        print(j)\n",
         "#print(newVitals)\n",
-        "#newVitals.to_csv('/content/gdrive/My Drive/Amgen_DS_Challenge/Train/newVitals.csv',index=False)\n",
+        "#newVitals.to_csv('/content/gdrive/My Drive/DS/Train/newVitals.csv',index=False)\n",
         "#newVitalsc = newVitals.copy(deep=True)"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -653,14 +653,14 @@
         "outputId": "e82bdca9-a9be-4572-d673-b7ec40991172"
       },
       "source": [
-        "newVitals=pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Train/newVitals.csv\")\n",
+        "newVitals=pd.read_csv(\"/content/gdrive/My Drive/DS/Train/newVitals.csv\")\n",
         "newVitalsc = newVitals.copy(deep=True)\n",
         "q1 = \"select count(*) as cnt,  * from newVitalsc group by patient_id\"\n",
         "newVitalsc = psql.sqldf(q1)\n",
         "del newVitalsc[\"cnt\"]\n",
         "newVitalsc.head(20)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,7 +1134,7 @@
         "newVitalsc.drop(newVitalsc.columns[[2, 3, 4,5]], axis = 1, inplace = True)\n",
         "newVitalsc.head(20)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1519,7 +1519,7 @@
         "q2 = \"select demo.*, newVitalsc.* from demo_train demo left join newVitalsc on demo.patient_id=newVitalsc.patient_id\"\n",
         "newVitalsc=psql.sqldf(q2)"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1537,7 +1537,7 @@
         "newVitalsc[\"gender\"]=newVitalsc[\"gender\"].replace({\"M\":0,\"F\":1})\n",
         "newVitalsc.head(10)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2104,9 +2104,9 @@
         "#        newLabs.iloc[j,ind]=(newLabs.iloc[j,2]+newLabs.iloc[j,3])/2\n",
         "#        print(j)\n",
         "#newLabs.head(10)\n",
-        "#newLabs.to_csv('/content/gdrive/My Drive/Amgen_DS_Challenge/Train/newLabs.csv',index=False)"
+        "#newLabs.to_csv('/content/gdrive/My Drive/DS/Train/newLabs.csv',index=False)"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2115,11 +2115,11 @@
         "id": "XEO2LnH_WE5q"
       },
       "source": [
-        "newLabs=pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Train/newLabs.csv\")\n",
+        "newLabs=pd.read_csv(\"/content/gdrive/My Drive/DS/Train/newLabs.csv\")\n",
         "newLabsc = newLabs.copy(deep=True)\n",
         "newLabsc.drop(newLabsc.columns[[2, 3, 4,5]], axis = 1, inplace = True)\n"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2138,7 +2138,7 @@
         "del newLabsc[\"cnt\"]\n",
         "newLabsc.head(20)"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2544,7 +2544,7 @@
         "q4 = \"select newVitalsc.*, newLabsc.* from newVitalsc left join newLabsc on newVitalsc.patient_id=newLabsc.patient_id\"\n",
         "training_data=psql.sqldf(q4)"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2560,7 +2560,7 @@
       "source": [
         "training_data.head(10)"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3236,7 +3236,7 @@
         "#### Deleting some categoriacal features that are not important\n",
         "x=training_data.drop(['hospital_id','hospital_admit_source','hospital_admit_source','icu_id','icu_admit_source','icu_type','icu_stay_type','bodysystem_diagnosis_admit','Vital','Lab'], axis = 1, inplace =False)\n"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3258,7 +3258,7 @@
         "    eth_d[eth_uni[i]]=len(eth_uni)*[0]\n",
         "    eth_d[eth_uni[i]][i]=1"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3289,7 +3289,7 @@
         "  x.iloc[j,44:]=eth_d[x.iloc[j,5]]\n",
         "  #print(j)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3313,7 +3313,7 @@
       "source": [
         "del x['ethnicity']"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3333,7 +3333,7 @@
         "for j in range(1,len(mean_values)):\n",
         "  x.iloc[:,j]=x.iloc[:,j].fillna(mean_values[j])\n"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3358,7 +3358,7 @@
         "x=x.dropna()\n",
         "x.replace([np.inf, -np.inf], np.nan, inplace=True)"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3400,7 +3400,7 @@
         "  print(maxx[j])\n",
         "X_train = X  "
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3486,7 +3486,7 @@
         "print(np.isfinite(X_train.any()))\n",
         "X_train= X_train[~np.isnan(X_train).any(axis=1)]"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3526,7 +3526,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(X_train, training_labels, test_size = 0.3)"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3545,7 +3545,7 @@
         "lr.fit(x_train,y_train)\n",
         "lr.score(x_test,y_test)\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3591,7 +3591,7 @@
         "clf = svm.fit(x_train, y_train)\n",
         "clf.score(x_test,y_test)"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3628,7 +3628,7 @@
         "plt.show(matrix)\n",
         "plt.show()"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3661,7 +3661,7 @@
         "rf.fit(x_train,y_train)\n",
         "rf.score(x_test,y_test)\n"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3692,7 +3692,7 @@
         "cv1=cross_val_score(LogisticRegression(solver='lbfgs',class_weight='balanced', max_iter=10000),X_train,training_labels)\n",
         "print('Logistic regression CV',cv1)\n"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3716,7 +3716,7 @@
         "cv2 = cross_val_score(SVC(),X_train,training_labels)\n",
         "print('SVM CV',cv2)\n"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3741,7 +3741,7 @@
         "print('Random Forest CV',cv3)\n",
         "cv3.mean"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3790,7 +3790,7 @@
         "print('Mean SVM CV',cv2.mean())\n",
         "print('Mean Random Forest CV',cv3.mean())"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3838,9 +3838,9 @@
         "#        newVitals_ts.iloc[j,ind]=(newVitals_ts.iloc[j,2]+newVitals_ts.iloc[j,3])/2\n",
         "#        print(j)\n",
         "#print(newVitals_ts)\n",
-        "#newVitals_ts.to_csv('/content/gdrive/My Drive/Amgen_DS_Challenge/Test/newVitals_ts.csv',index=False)"
+        "#newVitals_ts.to_csv('/content/gdrive/My Drive/DS/Test/newVitals_ts.csv',index=False)"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3854,14 +3854,14 @@
         "outputId": "d8eb499b-f1d9-4911-e8b3-5b8aaea11cce"
       },
       "source": [
-        "newVitals_ts=pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/newVitals_ts.csv\")\n",
+        "newVitals_ts=pd.read_csv(\"/content/gdrive/My Drive/DS/Test/newVitals_ts.csv\")\n",
         "newVitalsc_ts = newVitals_ts.copy(deep=True)\n",
         "q1 = \"select count(*) as cnt,  * from newVitalsc_ts group by patient_id\"\n",
         "newVitalsc_ts = psql.sqldf(q1)\n",
         "del newVitalsc_ts[\"cnt\"]\n",
         "newVitalsc_ts.head(20)"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4335,7 +4335,7 @@
         "newVitalsc_ts.drop(newVitalsc_ts.columns[[2, 3, 4,5]], axis = 1, inplace = True)\n",
         "newVitalsc_ts.head(20)"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4720,7 +4720,7 @@
         "q2 = \"select demo.*, newVitalsc_ts.* from demo_test demo left join newVitalsc_ts on demo.patient_id=newVitalsc_ts.patient_id\"\n",
         "newVitalsc_ts=psql.sqldf(q2)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4738,7 +4738,7 @@
         "newVitalsc_ts[\"gender\"]=newVitalsc_ts[\"gender\"].replace({\"M\":0,\"F\":1})\n",
         "newVitalsc_ts.head(10)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5285,9 +5285,9 @@
         "#        newLabs_ts.iloc[j,ind]=(newLabs_ts.iloc[j,2]+newLabs_ts.iloc[j,3])/2\n",
         "#        print(j)\n",
         "#newLabs_ts.head(10)\n",
-        "#newLabs_ts.to_csv('/content/gdrive/My Drive/Amgen_DS_Challenge/Test/newLabs_ts.csv',index=False)"
+        "#newLabs_ts.to_csv('/content/gdrive/My Drive/DS/Test/newLabs_ts.csv',index=False)"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5296,11 +5296,11 @@
         "id": "EiEhuOytCpPW"
       },
       "source": [
-        "newLabs_ts=pd.read_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/newLabs_ts.csv\")\n",
+        "newLabs_ts=pd.read_csv(\"/content/gdrive/My Drive/DS/Test/newLabs_ts.csv\")\n",
         "newLabsc_ts = newLabs_ts.copy(deep=True)\n",
         "newLabsc_ts.drop(newLabsc_ts.columns[[2, 3, 4,5]], axis = 1, inplace = True)"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5319,7 +5319,7 @@
         "del newLabsc_ts[\"cnt\"]\n",
         "newLabsc_ts.head(20)\n"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5725,7 +5725,7 @@
         "q4 = \"select newVitalsc_ts.*, newLabsc_ts.* from newVitalsc_ts left join newLabsc_ts on newVitalsc_ts.patient_id=newLabsc_ts.patient_id\"\n",
         "test_data=psql.sqldf(q4)"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5743,7 +5743,7 @@
         "x=test_data.drop(['hospital_id','hospital_admit_source','hospital_admit_source','icu_id','icu_admit_source','icu_type','icu_stay_type','bodysystem_diagnosis_admit','Vital','Lab'], axis = 1, inplace =False)\n",
         "x.head(10)"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6319,7 +6319,7 @@
         "    eth_d[eth_uni[i]]=len(eth_uni)*[0]\n",
         "    eth_d[eth_uni[i]][i]=1"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6348,7 +6348,7 @@
       "source": [
         "x.head(10)\n"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6987,7 +6987,7 @@
         "    x.iloc[j,43:]=eth_d[x.iloc[j,4]]\n",
         "    #print(j)"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7011,7 +7011,7 @@
       "source": [
         "del x['ethnicity']"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7031,7 +7031,7 @@
         "for j in range(1,len(mean_values)):\n",
         "   x.iloc[:,j]=x.iloc[:,j].fillna(mean_values[j])"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7056,7 +7056,7 @@
         "x=x.dropna()\n",
         "x.replace([np.inf, -np.inf], np.nan, inplace=True)"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7083,7 +7083,7 @@
         "  #print(maxx[j])\n",
         "X_test = X  "
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7121,7 +7121,7 @@
         "mortality_rate = s/pred_sh[0]   \n",
         "print(\"The mortality rate of the test set is equal to {x} percent\".format(x=np.round(mortality_rate*100)))    "
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7145,9 +7145,9 @@
         "output_file[\"Survival prob.\"] = y_pred_df.iloc[:,0]\n",
         "output_file[\"Death prob.\"] = y_pred_df.iloc[:,1]\n",
         "\n",
-        "output_file.to_csv(\"/content/gdrive/My Drive/Amgen_DS_Challenge/Test/output_file.csv\",index=False)"
+        "output_file.to_csv(\"/content/gdrive/My Drive/DS/Test/output_file.csv\",index=False)"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7163,7 +7163,7 @@
       "source": [
         "output_file.head(10)"
       ],
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
